Fix bug where the cookie-agreement component's close button is offscreen

--- a/src/app/shared/cookies/cookies.component.scss
+++ b/src/app/shared/cookies/cookies.component.scss
@@ -6,6 +6,7 @@
     position: relative;
     background: $dark-overlay;
     color: white;
+    box-sizing: border-box;
 
     .inner {
         width: 100%;
